@@ -3,7 +3,8 @@ package net.nuggetmc.tplus.command.commands;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
-import org.bukkit.ChatColor;
+
+import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.command.CommandSender;
@@ -37,22 +38,22 @@ public class BotEnvironmentCommand extends CommandInstance {
             autofill = "autofill"
     )
     public void help(CommandSender sender, List<String> args) {
-        if (args.size() > 0 && args.get(0).equals("blocks")) {
+        if (!args.isEmpty() && args.getFirst().equals("blocks")) {
             sender.sendMessage(ChatUtils.LINE);
             sender.sendMessage("If you are running this plugin on a hybrid server, keep in mind that blocks added by mods are not considered solid.");
-            sender.sendMessage("You must manually add solid blocks added by mods with " + ChatColor.YELLOW + "/botenvironment addSolid <material>" + ChatColor.RESET + ".");
+            sender.sendMessage("You must manually add solid blocks added by mods with " + NamedTextColor.YELLOW + "/botenvironment addSolid <material>" + NamedTextColor.WHITE + ".");
             sender.sendMessage(ChatUtils.LINE);
-        } else if (args.size() > 0 && args.get(0).equals("mobs")) {
+        } else if (!args.isEmpty() && args.getFirst().equals("mobs")) {
             sender.sendMessage(ChatUtils.LINE);
             sender.sendMessage("The custom mob list is a user-defined list of mobs.");
-            sender.sendMessage("Use " + ChatColor.YELLOW + "/botenvironment addCustomMob <name>" + ChatColor.RESET + " to add mob types to the list.");
+            sender.sendMessage("Use " + NamedTextColor.YELLOW + "/botenvironment addCustomMob <name>" + NamedTextColor.WHITE + " to add mob types to the list.");
             sender.sendMessage("The list can be used in the CUSTOM_LIST targeting option, and can also be appended to the hostile, raider, or mob targeting options.");
             sender.sendMessage("When appending, the mobs predefined as well as the mobs in the custom list will be considered.");
-            sender.sendMessage("Use " + ChatColor.YELLOW + "/botenvironment mobListType" + ChatColor.RESET + " to change the behavior of the custom mob list.");
+            sender.sendMessage("Use " + NamedTextColor.YELLOW + "/botenvironment mobListType" + NamedTextColor.WHITE + " to change the behavior of the custom mob list.");
             sender.sendMessage(ChatUtils.LINE);
         } else {
-            sender.sendMessage("Do " + ChatColor.YELLOW + "/botenvironment help blocks " + ChatColor.RESET + "for more information on adding solid blocks.");
-            sender.sendMessage("Do " + ChatColor.YELLOW + "/botenvironment help mobs " + ChatColor.RESET + "for more information on creating a custom mob list.");
+            sender.sendMessage("Do " + NamedTextColor.YELLOW + "/botenvironment help blocks " + NamedTextColor.WHITE + "for more information on adding solid blocks.");
+            sender.sendMessage("Do " + NamedTextColor.YELLOW + "/botenvironment help mobs " + NamedTextColor.WHITE + "for more information on creating a custom mob list.");
         }
     }
 
@@ -72,12 +73,12 @@ public class BotEnvironmentCommand extends CommandInstance {
             return;
         }
         if (!isLocationLoaded(loc)) {
-            sender.sendMessage(String.format("The location at " + ChatColor.BLUE + "(%d, %d, %d)" + ChatColor.RESET + " is not loaded.",
+            sender.sendMessage(String.format("The location at " + NamedTextColor.BLUE + "(%d, %d, %d)" + NamedTextColor.WHITE + " is not loaded.",
                     loc.getBlockX(), loc.getBlockY(), loc.getBlockZ()));
             return;
         }
         Material mat = loc.getBlock().getType();
-        sender.sendMessage(String.format("Material at " + ChatColor.BLUE + "(%d, %d, %d)" + ChatColor.RESET + ": " + ChatColor.GREEN + "%s" + ChatColor.RESET,
+        sender.sendMessage(String.format("Material at " + NamedTextColor.BLUE + "(%d, %d, %d)" + NamedTextColor.WHITE + ": " + NamedTextColor.GREEN + "%s" + NamedTextColor.WHITE,
                 loc.getBlockX(), loc.getBlockY(), loc.getBlockZ(), mat.name()));
     }
 
@@ -102,19 +103,19 @@ public class BotEnvironmentCommand extends CommandInstance {
                 loc.setY(parseDoubleOrRelative(args.get(1), loc, 1));
                 loc.setZ(parseDoubleOrRelative(args.get(2), loc, 2));
             } catch (NumberFormatException e) {
-                sender.sendMessage("A valid location must be provided! " + ChatColor.YELLOW + "/bot addSolid <x> <y> <z>" + ChatColor.RESET);
+                sender.sendMessage("A valid location must be provided! " + NamedTextColor.YELLOW + "/bot addSolid <x> <y> <z>" + NamedTextColor.WHITE);
                 return;
             }
             if (!isLocationLoaded(loc)) {
-                sender.sendMessage(String.format("The location at " + ChatColor.BLUE + "(%d, %d, %d)" + ChatColor.RESET + " is not loaded.",
+                sender.sendMessage(String.format("The location at " + NamedTextColor.BLUE + "(%d, %d, %d)" + NamedTextColor.WHITE + " is not loaded.",
                     loc.getBlockX(), loc.getBlockY(), loc.getBlockZ()));
                 return;
             }
             mat = loc.getBlock().getType();
         } else {
             sender.sendMessage("Invalid syntax!");
-            sender.sendMessage("To specify a material: " + ChatColor.YELLOW + "/bot addSolid <material>" + ChatColor.RESET);
-            sender.sendMessage("To specify a location containing a material: " + ChatColor.YELLOW + "/bot addSolid <x> <y> <z>" + ChatColor.RESET);
+            sender.sendMessage("To specify a material: " + NamedTextColor.YELLOW + "/bot addSolid <material>" + NamedTextColor.WHITE);
+            sender.sendMessage("To specify a location containing a material: " + NamedTextColor.YELLOW + "/bot addSolid <x> <y> <z>" + NamedTextColor.WHITE);
             return;
         }
         if (mat == null) {
@@ -122,9 +123,9 @@ public class BotEnvironmentCommand extends CommandInstance {
             return;
         }
         if (LegacyMats.SOLID_MATERIALS.add(mat))
-            sender.sendMessage("Successfully added " + ChatColor.BLUE + mat.name() + ChatColor.RESET + " to the list.");
+            sender.sendMessage("Successfully added " + NamedTextColor.BLUE + mat.name() + NamedTextColor.WHITE + " to the list.");
         else
-            sender.sendMessage(ChatColor.BLUE + mat.name() + ChatColor.RESET + " already exists in the list!");
+            sender.sendMessage(NamedTextColor.BLUE + mat.name() + NamedTextColor.WHITE + " already exists in the list!");
     }
 
     @Command(
@@ -148,19 +149,19 @@ public class BotEnvironmentCommand extends CommandInstance {
                 loc.setY(parseDoubleOrRelative(args.get(1), loc, 1));
                 loc.setZ(parseDoubleOrRelative(args.get(2), loc, 2));
             } catch (NumberFormatException e) {
-                sender.sendMessage("A valid location must be provided! " + ChatColor.YELLOW + "/bot removeSolid <x> <y> <z>" + ChatColor.RESET);
+                sender.sendMessage("A valid location must be provided! " + NamedTextColor.YELLOW + "/bot removeSolid <x> <y> <z>" + NamedTextColor.WHITE);
                 return;
             }
             if (!isLocationLoaded(loc)) {
-                sender.sendMessage(String.format("The location at " + ChatColor.BLUE + "(%d, %d, %d)" + ChatColor.RESET + " is not loaded.",
+                sender.sendMessage(String.format("The location at " + NamedTextColor.BLUE + "(%d, %d, %d)" + NamedTextColor.WHITE + " is not loaded.",
                     loc.getBlockX(), loc.getBlockY(), loc.getBlockZ()));
                 return;
             }
             mat = loc.getBlock().getType();
         } else {
             sender.sendMessage("Invalid syntax!");
-            sender.sendMessage("To specify a material: " + ChatColor.YELLOW + "/bot removeSolid <material>" + ChatColor.RESET);
-            sender.sendMessage("To specify a location containing a material: " + ChatColor.YELLOW + "/bot removeSolid <x> <y> <z>" + ChatColor.RESET);
+            sender.sendMessage("To specify a material: " + NamedTextColor.YELLOW + "/bot removeSolid <material>" + NamedTextColor.WHITE);
+            sender.sendMessage("To specify a location containing a material: " + NamedTextColor.YELLOW + "/bot removeSolid <x> <y> <z>" + NamedTextColor.WHITE);
             return;
         }
         if (mat == null) {
@@ -168,9 +169,9 @@ public class BotEnvironmentCommand extends CommandInstance {
             return;
         }
         if (LegacyMats.SOLID_MATERIALS.remove(mat))
-            sender.sendMessage("Successfully removed " + ChatColor.BLUE + mat.name() + ChatColor.RESET + " from the list.");
+            sender.sendMessage("Successfully removed " + NamedTextColor.BLUE + mat.name() + NamedTextColor.WHITE + " from the list.");
         else
-            sender.sendMessage(ChatColor.BLUE + mat.name() + ChatColor.RESET + " does not exist in the list!");
+            sender.sendMessage(NamedTextColor.BLUE + mat.name() + NamedTextColor.WHITE + " does not exist in the list!");
     }
 
     @Command(
@@ -181,8 +182,8 @@ public class BotEnvironmentCommand extends CommandInstance {
     public void listSolids(CommandSender sender) {
         sender.sendMessage(ChatUtils.LINE);
         for (Material mat : LegacyMats.SOLID_MATERIALS)
-            sender.sendMessage(ChatColor.GREEN + mat.name() + ChatColor.RESET);
-        sender.sendMessage("Total items: " + ChatColor.BLUE + LegacyMats.SOLID_MATERIALS.size() + ChatColor.RESET);
+            sender.sendMessage(NamedTextColor.GREEN + mat.name() + NamedTextColor.WHITE);
+        sender.sendMessage("Total items: " + NamedTextColor.BLUE + LegacyMats.SOLID_MATERIALS.size() + NamedTextColor.WHITE);
         sender.sendMessage(ChatUtils.LINE);
     }
 
@@ -194,7 +195,7 @@ public class BotEnvironmentCommand extends CommandInstance {
     public void clearSolids(CommandSender sender) {
         int size = LegacyMats.SOLID_MATERIALS.size();
         LegacyMats.SOLID_MATERIALS.clear();
-        sender.sendMessage("Removed all " + ChatColor.BLUE + size + ChatColor.RESET + " item(s) from the list.");
+        sender.sendMessage("Removed all " + NamedTextColor.BLUE + size + NamedTextColor.WHITE + " item(s) from the list.");
     }
 
     @Command(
@@ -210,9 +211,9 @@ public class BotEnvironmentCommand extends CommandInstance {
             return;
         }
         if (LegacyAgent.CUSTOM_MOB_LIST.add(type))
-            sender.sendMessage("Successfully added " + ChatColor.BLUE + type.name() + ChatColor.RESET + " to the list.");
+            sender.sendMessage("Successfully added " + NamedTextColor.BLUE + type.name() + NamedTextColor.WHITE + " to the list.");
         else
-            sender.sendMessage(ChatColor.BLUE + type.name() + ChatColor.RESET + " already exists in the list!");
+            sender.sendMessage(NamedTextColor.BLUE + type.name() + NamedTextColor.WHITE + " already exists in the list!");
     }
 
     @Command(
@@ -228,9 +229,9 @@ public class BotEnvironmentCommand extends CommandInstance {
             return;
         }
         if (LegacyAgent.CUSTOM_MOB_LIST.remove(type))
-            sender.sendMessage("Successfully removed " + ChatColor.BLUE + type.name() + ChatColor.RESET + " from the list.");
+            sender.sendMessage("Successfully removed " + NamedTextColor.BLUE + type.name() + NamedTextColor.WHITE + " from the list.");
         else
-            sender.sendMessage(ChatColor.BLUE + type.name() + ChatColor.RESET + " does not exist in the list!");
+            sender.sendMessage(NamedTextColor.BLUE + type.name() + NamedTextColor.WHITE + " does not exist in the list!");
     }
 
     @Command(
@@ -241,8 +242,8 @@ public class BotEnvironmentCommand extends CommandInstance {
     public void listCustomMobs(CommandSender sender) {
         sender.sendMessage(ChatUtils.LINE);
         for (EntityType type : LegacyAgent.CUSTOM_MOB_LIST)
-            sender.sendMessage(ChatColor.GREEN + type.name() + ChatColor.RESET);
-        sender.sendMessage("Total items: " + ChatColor.BLUE + LegacyAgent.CUSTOM_MOB_LIST.size() + ChatColor.RESET);
+            sender.sendMessage(NamedTextColor.GREEN + type.name() + NamedTextColor.WHITE);
+        sender.sendMessage("Total items: " + NamedTextColor.BLUE + LegacyAgent.CUSTOM_MOB_LIST.size() + NamedTextColor.WHITE);
         sender.sendMessage(ChatUtils.LINE);
     }
 
@@ -254,7 +255,7 @@ public class BotEnvironmentCommand extends CommandInstance {
     public void clearCustomMobs(CommandSender sender) {
         int size = LegacyAgent.CUSTOM_MOB_LIST.size();
         LegacyAgent.CUSTOM_MOB_LIST.clear();
-        sender.sendMessage("Removed all " + ChatColor.BLUE + size + ChatColor.RESET + " item(s) from the list.");
+        sender.sendMessage("Removed all " + NamedTextColor.BLUE + size + NamedTextColor.WHITE + " item(s) from the list.");
     }
 
     @Command(
@@ -265,13 +266,13 @@ public class BotEnvironmentCommand extends CommandInstance {
     )
     public void mobListType(CommandSender sender, List<String> args) {
         if (args.isEmpty()) {
-            sender.sendMessage("The custom mob list type is " + ChatColor.BLUE + LegacyAgent.customListMode + ChatColor.RESET + ".");
+            sender.sendMessage("The custom mob list type is " + NamedTextColor.BLUE + LegacyAgent.customListMode + NamedTextColor.WHITE + ".");
         } else if (args.size() > 0 && CustomListMode.isValid(args.get(0))) {
             LegacyAgent.customListMode = CustomListMode.from(args.get(0));
             sender.sendMessage(
-                    "Successfully set the custom mob list type to " + ChatColor.BLUE + args.get(0) + ChatColor.RESET + ".");
+                    "Successfully set the custom mob list type to " + NamedTextColor.BLUE + args.get(0) + NamedTextColor.WHITE + ".");
         } else
-            sender.sendMessage("Usage: " + ChatColor.YELLOW + "/botenvironment mobListType (" + CustomListMode.listModes() + ")" + ChatColor.RESET);
+            sender.sendMessage("Usage: " + NamedTextColor.YELLOW + "/botenvironment mobListType (" + CustomListMode.listModes() + ")" + NamedTextColor.WHITE);
     }
 
     @Autofill
